empeze mi portafolio

--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 </head>
 
 <body>
-
+    <h5>Soy, lo que hago "Mi Portafolio".</h5>
+    <nav class="navbar-dark">
+        <ul>
+            <li>
+                <a href="#">quien soy?</a>
+            </li>
+            <li>
+                <a href="#">a que me dedico?</a>
+            </li>
+        </ul>
+    </nav>
 
 </body>
 
