--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Portafolio</title>
+    <title>empezando el martirio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 
 <body>
-    <h5>Soy, lo que hago "Mi Portafolio".</h5>
+    <h5>una app, para aprender</h5>
     <nav class="navbar-dark">
         <ul>
             <li>
-                <a href="#">quien soy?</a>
+                <a href="#">menu</a>
             </li>
             <li>
-                <a href="#">a que me dedico?</a>
+                <a href="#">que hacemos?</a>
             </li>
         </ul>
     </nav>
