ya no aguanto el sueño

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Portafolio</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="styleshet" href="css/main.css">
+    <link rel="styleshet" href="main.css" />
 </head>
 
 <body>
