--- a/index.html
+++ b/index.html
@@ -5,24 +5,36 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Portafolio</title>
-    <link rel="styleshet" href="main.css" />
+    <link rel="stylesheet" href="./css/custom.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm navbar-dark bg-gradient">
-        <div>
-            <ul>
-                <li><a href="#">Acerca de mi</a></li>
-                <li>
-                    <a href="#">Proyectos</a>
-                </li>
-                <li>
-                    <a href="#">Habilidades</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <div>
 
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <h1>::.Portafolio.::</h1>
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Inicio</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link " aria-current="page" href="#">Sobre mi</a>
+                        <a class="nav-link " href="#">Habilidades</a>
+                        <a class="nav-link" href="#">Proyectos</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <img src=" /img/ridiculo.jpg " class="imagen">
+
+        <div>
+            <h5 class="parrafo">
+                Hola, mi nombre es Anibal Portillo, soy estudiante de ingenieria en sistemas.
+            </h5>
+        </div>
+    </div>
 </body>
 
 </html>
