ya hagarro forma una flex box

--- a/habilidades.html
+++ b/habilidades.html
@@ -32,11 +32,11 @@
         <div class="cards-container">
             <div class="card">
                 <figure class="card-figure">
-                    <img class="imagen" src="./img/1.jpg" />
+                    <img class="imagen" src="./img/html5.jpg" />
                 </figure>
                 <div class="card-body">
                     <h2 class="card-title">Conocimientos basicos en HTML,CSS3,JAVASCRIPT</h2>
-                    <p class="card-text">conozco lo basico en frontend "html,css,javascrip(lado de cliente"
+                    <p class="card-text">Conozco lo basico en frontend "html,css,javascrip(lado de cliente)"
                     </p>
                 </div>
             </div>
