--- a/index.html
+++ b/index.html
@@ -5,40 +5,46 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Portafolio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/custom.css">
 </head>
 
 <body class="contenedor">
-    <main>
-        <div>
+    <div>
 
-            <nav class=" navbar navbar-expand-lg navbar-light ">
-                <h1>::.Portafolio.::</h1>
-                <div class="container-fluid ">
-                    <a class="navbar-brand " href="index.html">Sobre Mi</a>
-                    <button class="navbar-toggler " type="button " data-bs-toggle="collapse " data-bs-target="#navbarNavAltMarkup " aria-controls="navbarNavAltMarkup " aria-expanded="false " aria-label="Toggle navigation ">
-                <span class="navbar-toggler-icon "></span>
-              </button>
-                    <div class="collapse navbar-collapse " id="navbarNavAltMarkup ">
-                        <div class="navbar-nav ">
-                            <!--<a class="nav-link " aria-current="page " href="# ">Sobre mi</a>-->
-                            <a class="nav-link " href="habilidades.html">Habilidades</a>
-                            <a class="nav-link " href="aprendizaje.html">Proyectos</a>
-                        </div>
+        <nav class=" navbar navbar-expand-lg navbar-light ">
+            <h1>::.Portafolio.::</h1>
+            <div class="container-fluid ">
+                <a class="navbar-brand " href="index.html">Sobre Mi</a>
+                <button class="navbar-toggler " type="button " data-bs-toggle="collapse " data-bs-target="#navbarNavAltMarkup " aria-controls="navbarNavAltMarkup " aria-expanded="false " aria-label="Toggle navigation ">
+    <span class="navbar-toggler-icon "></span>
+  </button>
+                <div class="collapse navbar-collapse " id="navbarNavAltMarkup ">
+                    <div class="navbar-nav ">
+                        <!--<a class="nav-link " aria-current="page " href="# ">Sobre mi</a>-->
+                        <a class="nav-link " href="habilidades.html">Habilidades</a>
+                        <a class="nav-link " href="aprendizaje.html">Proyectos</a>
                     </div>
                 </div>
-            </nav>
-            <div class="card-perfil">
-                <img src=" /img/ridiculo.jpg " alt="imagen de mi" class="imagen">
-                <div>
-                    <h5 class="card-texto">
-                        Hola, mi nombre es Anibal Portillo, soy estudiante de ingenieria en sistemas,
-                        <p>apasionado por la programacion, dibujo,musica,lectura. Y poseo ciertas habilidades semi-desarrolladas,para ayudar un poco a los demas, me gusta compartir conocimientos. isfruto mucho hablar y enseñar lo que capturo durante mi estudios,
-                            ya que es un metodo que me ayuda a crecer internamente.</p>
-                    </h5>
-                </div>
             </div>
-        </div>
+        </nav>
+        <main class="flex">
+            <article class="targ">
+
+                <div class="card-perfil">
+                    <img src=" /img/ridiculo.jpg " alt="imagen de mi" class="imagen">
+                    <div>
+                        <h5 class="card-texto">
+                            Hola, mi nombre es Anibal Portillo, soy estudiante de ingenieria en sistemas,
+                            <p class="card-parrafo"> apasionado por la programacion, dibujo,musica,lectura. Y poseo ciertas habilidades semi-desarrolladas,para ayudar un poco a los demas, me gusta compartir conocimientos. isfruto mucho hablar y enseñar lo que capturo durante
+                                mi estudios, ya que es un metodo que me ayuda a crecer internamente.</p>
+                        </h5>
+                    </div>
+                </div>
+    </div>
+    </article>
+
     </main>
 </body>
 
