--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="es">
 
 <head>
@@ -23,29 +24,71 @@
                 <div class="collapse navbar-collapse " id="navbarNavAltMarkup ">
                     <div class="navbar-nav ">
                         <!--<a class="nav-link " aria-current="page " href="# ">Sobre mi</a>-->
-                        <a class="nav-link " href="habilidades.html">Habilidades</a>
-                        <a class="nav-link " href="aprendizaje.html">Proyectos</a>
+                        <a class="nav-link " href="#proyectos">Proyectos</a>
                     </div>
                 </div>
             </div>
         </nav>
-        <main class="flex">
-            <article class="targ">
+        <section>
+            <div class="perfil">
+                <img src=" /img/ridiculo.jpg " alt="imagen de mi" class="imagen">
+                <div>
+                    <h5>
+                        Hola, mi nombre es Anibal Portillo, soy estudiante de ingenieria en sistemas, apasionado por la programacion, dibujo,musica,lectura. Y poseo ciertas habilidades semi-desarrolladas,para ayudar un poco a los demas, me gusta compartir conocimientos. Disfruto
+                        mucho hablar y enseñar lo que capturo durante mi estudios, ya que es un metodo que me ayuda a crecer internamente.
+                    </h5>
+                </div>
+            </div>
+            <div>
+                <h2>habilidades duras</h2>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore consequuntur dolorem mollitia quas, aliquid architecto iste labore quis id dolorum impedit rerum ducimus quo quos laborum inventore voluptates esse deserunt!
+            </div>
 
-                <div class="card-perfil">
-                    <img src=" /img/ridiculo.jpg " alt="imagen de mi" class="imagen">
+            <div>
+                <h2>habilidades blandas</h2>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis veritatis velit repellat aspernatur cum, asperiores maxime deserunt, provident laudantium beatae modi labore illo accusamus omnis nobis ipsa ullam eveniet. Soluta?
+            </div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam dolorum accusamus fuga odit animi vero iste qui odio voluptate accusantium, provident non laudantium consequatur minus? Facere impedit quibusdam sint quae!
+        </section>
+        <hr>
+        <hr>
+        <section id="proyectos">
+            <div class="cards">
+                <div>
+                    <img src=" /img/sql.png " alt="imagen de mi " class="imagen-pro ">
                     <div>
-                        <h5 class="card-texto">
-                            Hola, mi nombre es Anibal Portillo, soy estudiante de ingenieria en sistemas,
-                            <p class="card-parrafo"> apasionado por la programacion, dibujo,musica,lectura. Y poseo ciertas habilidades semi-desarrolladas,para ayudar un poco a los demas, me gusta compartir conocimientos. isfruto mucho hablar y enseñar lo que capturo durante
-                                mi estudios, ya que es un metodo que me ayuda a crecer internamente.</p>
+                        <h5>
+                            Hola, mi nombre es Anibal Portillo, soy estudiante de ingenieria en sistemas, apasionado por la programacion, dibujo,musica,lectura. Y poseo ciertas habilidades
                         </h5>
                     </div>
                 </div>
+                <div>
+                    <img src="/img/dormir.jpg " alt="imagen de mi " class="imagen-pro ">
+                    <div>
+                        <h5>
+                            Hola, mi nombre es Anibal Portillo, soy estudiante de ingenieria en sistemas, apasionado por la programacion, dibujo,musica,lectura. Y poseo ciertas habilidades ya que es un metodo que me ayuda a crecer internamente. </h5>
+                    </div>
+                </div>
+                <div>
+                    <img src="/img/vin.png " alt="imagen de mi " class="imagen-pro ">
+                    <div>
+                        <h5>
+                            Hola, mi nombre es Anibal Portillo, soy estudiante de olladas,para ayudar un poco a los demas, me gusta compartir conocimientos. isfruto mucho hablar y enseñar lo que capturo durante mi estudios, ya que es un metodo que me ayuda a crecer internamente.
+                        </h5>
+                    </div>
+                </div>
+                <div>
+                    <img src=" /img/k.jpg " alt="imagen de mi " class="imagen-pro ">
+                    <div>
+                        <h5>
+                            Hola, mi nombre es Anibal Portillo, soy estudiante de ingenieria en sistemas, apasionado por la programacion, dibujo,musica,lectura. Y poseo ciertas habilidades semi-desarrolladas,para ayudar un poco a los demas, me gusta compartir conocimientos. isfruto
+                            mucho hablar y enseñar lo que capturo durante mi estudios.
+                        </h5>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
-    </article>
-
-    </main>
 </body>
 
 </html>
