--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/custom.css">
 </head>
 
-<body class="contenedor">
+<body>
     <div>
 
         <nav class=" navbar navbar-expand-lg navbar-light ">
@@ -30,8 +30,8 @@
             </div>
         </nav>
         <section>
-            <div class="perfil">
-                <img src=" /img/ridiculo.jpg " alt="imagen de mi" class="imagen">
+            <div class="container">
+                <img src=" /img/ridiculo.jpg">
                 <div>
                     <h5>
                         Hola, mi nombre es Anibal Portillo, soy estudiante de ingenieria en sistemas, apasionado por la programacion, dibujo,musica,lectura. Y poseo ciertas habilidades semi-desarrolladas,para ayudar un poco a los demas, me gusta compartir conocimientos. Disfruto
