--- a/lecturas.html
+++ b/lecturas.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-
 <html lang="es">
-
 
 <head>
     <meta charset="UTF-8">
@@ -14,6 +12,60 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">::. Agua Potable .::</a>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+
+                    <li class="nav-item">
+                        <a class="nav-link mostrar" data-form="cliente" href="clientes.html">Clientes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link mostrar" data-form="cliente" href="#">Lecturas</a>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <form v-on:submit.prevent="guardarCliente" v-on:reset="limpiar">
+
+        <div class="col-sm"></div>
+        <div class="col-sm-6 p-2">
+            <div class="row text-center text-white bg-primary">
+                <div class="col">
+                    <h5>REGISTRO DE LECTURAS</h5>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <table class="table table-sm table-hover">
+                        <thead>
+
+                            <tr>
+                                <th>Clientes</th>
+                                <th>lectura anterior</th>
+                                <th>lectura actual</th>
+                                <th>pago</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr v-for="pro in clientes" v-on:click="mostrarCliente(pro)">
+                                <td>mostrar n clientes</td>
+                                <td>0</td>
+                                <td><input type="num"></td>
+                                <td>0</td>
+                                <td>
+                                    <a @click.stop="eliminarCliente(pro)" class="btn btn-danger">DEL</a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </form>
 
 </body>
 
