--- a/lecturas.html
+++ b/lecturas.html
@@ -56,12 +56,12 @@
                                 <td>0</td>
                                 <td><input type="num"></td>
                                 <td>0</td>
-                                <td>
-                                    <a @click.stop="eliminarCliente(pro)" class="btn btn-danger">DEL</a>
-                                </td>
                             </tr>
                         </tbody>
                     </table>
+                    <button>Nuevo</button>
+                    <button>Guardar</button>
+                    <button>Limpiar</button>
                 </div>
             </div>
         </div>
