--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
     <script src="https://unpkg.com/vue-select@latest"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script src="clientes.js"></script>
 
 </body>
