--- a/lecturas.html
+++ b/lecturas.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema Agua Potable</title>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/vue-select@latest/dist/vue-select.css">
-    <link rel="stylesheet" href="./estilos.css">
+
 </head>
 
 <body>
@@ -29,7 +29,7 @@
             </div>
         </div>
     </nav>
-    <form v-on:submit.prevent="guardarCliente" v-on:reset="limpiar">
+    <form v-on:submit.prevent="guardarLectura" v-on:reset="limpiar" id="appLectura">
 
         <div class="col-sm"></div>
         <div class="col-sm-6 p-2">
@@ -51,22 +51,26 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr v-for="pro in clientes" v-on:click="mostrarCliente(pro)">
-                                <td>mostrar n clientes</td>
-                                <td>0</td>
-                                <td><input type="num"></td>
-                                <td>0</td>
+                            <tr v-for="(pro,index) in client":key="index" v-on:click="mostrarCliente(pro)" >
+                                <td>{{pro.nombre}}</td>
+                                <td class="text-center">{{pro.ctura_acterior}}</td>
+                                <td><input class="form-control form-contro-sm text-center" type="number" v-model="lectura.nuevaLectura"
+                                        placeholder="escribe la lectura"></td>
+                                <td class="text-center">{{pro.lectura_actual}}</td>
                             </tr>
                         </tbody>
                     </table>
-                    <button>Nuevo</button>
-                    <button>Guardar</button>
-                    <button>Limpiar</button>
+                    <button class="btn btn-dark">Nuevo</button>
+                    <button class="btn btn-primary">Guardar</button>
+                    <button class="btn btn-warning">Limpiar</button>
                 </div>
             </div>
         </div>
     </form>
-
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue-select@latest"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <script src="./lecturas.js"></script>
 </body>
 
 </html>
