modificaciones de la foto de perfil

--- a/index.html
+++ b/index.html
@@ -30,64 +30,64 @@
             </div>
         </nav>
         <section>
-            <div class="container">
-                <img src=" /img/ridiculo.jpg">
+            <div class="container-cards">
+                <img class="container-cards-img" src=" /img/ridiculo.jpg">
+                <div>
+                    <p class="container-cards-text"> Hola, mi nombre es Anibal Portillo, soy estudiante de ingenieria en sistemas, apasionado por la programacion, dibujo,musica,lectura. Y poseo ciertas habilidades semi-desarrolladas,para ayudar un poco a los demas, me gusta compartir
+                        conocimientos. Disfruto mucho hablar y enseñar lo que capturo durante mi estudios, ya que es un metodo que me ayuda a crecer internamente. </div>
+                </p>
+            </div>
+
+    </div>
+    <div>
+        <h2>habilidades duras</h2>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore consequuntur dolorem mollitia quas, aliquid architecto iste labore quis id dolorum impedit rerum ducimus quo quos laborum inventore voluptates esse deserunt!
+    </div>
+
+    <div>
+        <h2>habilidades blandas</h2>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis veritatis velit repellat aspernatur cum, asperiores maxime deserunt, provident laudantium beatae modi labore illo accusamus omnis nobis ipsa ullam eveniet. Soluta? Lorem ipsum dolor sit amet
+        consectetur adipisicing elit. Ullam dolorum accusamus fuga odit animi vero iste qui odio voluptate accusantium, provident non laudantium consequatur minus? Facere impedit quibusdam sint quae!
+    </div>
+
+    </section>
+    <hr>
+    <section id="proyectos">
+        <div class="cards">
+            <div>
+                <img src=" /img/sql.png " alt="imagen de mi " class="imagen-pro ">
                 <div>
                     <h5>
-                        Hola, mi nombre es Anibal Portillo, soy estudiante de ingenieria en sistemas, apasionado por la programacion, dibujo,musica,lectura. Y poseo ciertas habilidades semi-desarrolladas,para ayudar un poco a los demas, me gusta compartir conocimientos. Disfruto
-                        mucho hablar y enseñar lo que capturo durante mi estudios, ya que es un metodo que me ayuda a crecer internamente.
+                        Hola, mi nombre es Anibal Portillo, soy estudiante de ingenieria en sistemas, apasionado por la programacion, dibujo,musica,lectura. Y poseo ciertas habilidades
                     </h5>
                 </div>
             </div>
             <div>
-                <h2>habilidades duras</h2>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore consequuntur dolorem mollitia quas, aliquid architecto iste labore quis id dolorum impedit rerum ducimus quo quos laborum inventore voluptates esse deserunt!
+                <img src="/img/dormir.jpg " alt="imagen de mi " class="imagen-pro ">
+                <div>
+                    <h5>
+                        Hola, mi nombre es Anibal Portillo, soy estudiante de ingenieria en sistemas, apasionado por la programacion, dibujo,musica,lectura. Y poseo ciertas habilidades ya que es un metodo que me ayuda a crecer internamente. </h5>
+                </div>
             </div>
-
             <div>
-                <h2>habilidades blandas</h2>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis veritatis velit repellat aspernatur cum, asperiores maxime deserunt, provident laudantium beatae modi labore illo accusamus omnis nobis ipsa ullam eveniet. Soluta?
-            </div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam dolorum accusamus fuga odit animi vero iste qui odio voluptate accusantium, provident non laudantium consequatur minus? Facere impedit quibusdam sint quae!
-        </section>
-        <hr>
-        <hr>
-        <section id="proyectos">
-            <div class="cards">
+                <img src="/img/vin.png " alt="imagen de mi " class="imagen-pro ">
                 <div>
-                    <img src=" /img/sql.png " alt="imagen de mi " class="imagen-pro ">
-                    <div>
-                        <h5>
-                            Hola, mi nombre es Anibal Portillo, soy estudiante de ingenieria en sistemas, apasionado por la programacion, dibujo,musica,lectura. Y poseo ciertas habilidades
-                        </h5>
-                    </div>
-                </div>
-                <div>
-                    <img src="/img/dormir.jpg " alt="imagen de mi " class="imagen-pro ">
-                    <div>
-                        <h5>
-                            Hola, mi nombre es Anibal Portillo, soy estudiante de ingenieria en sistemas, apasionado por la programacion, dibujo,musica,lectura. Y poseo ciertas habilidades ya que es un metodo que me ayuda a crecer internamente. </h5>
-                    </div>
-                </div>
-                <div>
-                    <img src="/img/vin.png " alt="imagen de mi " class="imagen-pro ">
-                    <div>
-                        <h5>
-                            Hola, mi nombre es Anibal Portillo, soy estudiante de olladas,para ayudar un poco a los demas, me gusta compartir conocimientos. isfruto mucho hablar y enseñar lo que capturo durante mi estudios, ya que es un metodo que me ayuda a crecer internamente.
-                        </h5>
-                    </div>
-                </div>
-                <div>
-                    <img src=" /img/k.jpg " alt="imagen de mi " class="imagen-pro ">
-                    <div>
-                        <h5>
-                            Hola, mi nombre es Anibal Portillo, soy estudiante de ingenieria en sistemas, apasionado por la programacion, dibujo,musica,lectura. Y poseo ciertas habilidades semi-desarrolladas,para ayudar un poco a los demas, me gusta compartir conocimientos. isfruto
-                            mucho hablar y enseñar lo que capturo durante mi estudios.
-                        </h5>
-                    </div>
+                    <h5>
+                        Hola, mi nombre es Anibal Portillo, soy estudiante de olladas,para ayudar un poco a los demas, me gusta compartir conocimientos. isfruto mucho hablar y enseñar lo que capturo durante mi estudios, ya que es un metodo que me ayuda a crecer internamente.
+                    </h5>
                 </div>
             </div>
-        </section>
+            <div>
+                <img src=" /img/k.jpg " alt="imagen de mi " class="imagen-pro ">
+                <div>
+                    <h5>
+                        Hola, mi nombre es Anibal Portillo, soy estudiante de ingenieria en sistemas, apasionado por la programacion, dibujo,musica,lectura. Y poseo ciertas habilidades semi-desarrolladas,para ayudar un poco a los demas, me gusta compartir conocimientos. isfruto
+                        mucho hablar y enseñar lo que capturo durante mi estudios.
+                    </h5>
+                </div>
+            </div>
+        </div>
+    </section>
     </div>
 </body>
 
