--- a/clientes.html
+++ b/clientes.html
@@ -8,8 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema Agua Potable</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
 </head>
 
@@ -41,8 +40,7 @@
                                 <h5>REGISTRO DE CLIENTES</h5>
                             </div>
                             <div class="col-1 align-middle">
-                                <button type="button" onclick="appVue.forms['cliente'].mostrar=false" class="btn-close"
-                                    aria-label="Close"></button>
+                                <button type="button" onclick="appVue.forms['cliente'].mostrar=false" class="btn-close" aria-label="Close"></button>
                             </div>
                         </div>
                     </div>
@@ -56,15 +54,13 @@
                 <div class="row p-2">
                     <div class="col-sm">NOMBRE: </div>
                     <div class="col-sm">
-                        <input v-model="client.nombre" required pattern="[A-ZÑña-z0-9, ]{5,65}" type="text"
-                            class="form-control form-control-sm">
+                        <input v-model="client.nombre" required pattern="[A-ZÑña-z0-9, ]{5,65}" type="text" class="form-control form-control-sm">
                     </div>
                 </div>
                 <div class="row p-2">
                     <div class="col-sm">DIRECCION: </div>
                     <div class="col-sm">
-                        <input v-model="client.direccion" required pattern="[A-ZÑña-z0-9, ]{5,65}" type="text"
-                            class="form-control form-control-sm">
+                        <input v-model="client.direccion" required pattern="[A-ZÑña-z0-9, ]{5,65}" type="text" class="form-control form-control-sm">
                     </div>
                 </div>
                 <div class="row p-2">
@@ -79,7 +75,7 @@
                         <input type="reset" value="Limpiar" class="btn btn-warning">
                     </div>
                 </div>
-               
+
             </div>
             <div class="col-sm"></div>
             <div class="col-sm-6 p-2">
@@ -94,8 +90,7 @@
                             <thead>
                                 <tr>
                                     <td colspan="5">
-                                        <input v-model="buscar" v-on:keyup="buscandoCliente" type="text"
-                                            class="form-control form-contro-sm" placeholder="Buscar clientes">
+                                        <input v-model="buscar" v-on:keyup="buscandoCliente" type="text" class="form-control form-contro-sm" placeholder="Buscar clientes">
                                     </td>
                                 </tr>
                                 <tr>
@@ -124,7 +119,7 @@
         </div>
     </form>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <script src="https//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script src="./clientes.js"></script>
 
 </body>
