--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="es">
 
 <head>
@@ -8,36 +7,61 @@
     <title>Mi Portafolio</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/custom.css">
 </head>
 
 <body>
     <div>
-
         <nav class=" navbar navbar-expand-lg navbar-light ">
             <h1>::.Portafolio.::</h1>
             <div class="container-fluid ">
                 <a class="navbar-brand " href="index.html">Sobre Mi</a>
                 <button class="navbar-toggler " type="button " data-bs-toggle="collapse " data-bs-target="#navbarNavAltMarkup " aria-controls="navbarNavAltMarkup " aria-expanded="false " aria-label="Toggle navigation ">
-    <span class="navbar-toggler-icon "></span>
-  </button>
+                <span class="navbar-toggler-icon "></span></button>
                 <div class="collapse navbar-collapse " id="navbarNavAltMarkup ">
                     <div class="navbar-nav ">
-                        <!--<a class="nav-link " aria-current="page " href="# ">Sobre mi</a>-->
-                        <a class="nav-link " href="#proyectos">Proyectos</a>
+                        <a class="nav-link " href="#proyectos">Aprendizajes Obtenidos</a>
                     </div>
                 </div>
             </div>
         </nav>
-        <section>
-            <div class="container">
-                <div class="cards">
-                    <img class="cards-img" src=" /img/ridiculo.jpg">
-                    <p class="cards-text"> Hola, mi nombre es Anibal Portillo, soy estudiante de ingenieria en sistemas, apasionado por la programacion, dibujo,musica,lectura. Y poseo ciertas habilidades semi-desarrolladas,para ayudar un poco a los demas, me gusta compartir
-                        conocimientos. Disfruto mucho hablar y enseñar lo que capturo durante mi estudios, ya que es un metodo que me ayuda a crecer internamente. </div>
+    </div>
+    <section>
+        <div class="container">
+            <div class="cards">
+                <img src=" /img/ridiculo.jpg">
+                <p> Hola, mi nombre es <b>Anibal Portillo</b> , soy estudiante de ingenieria en sistemas, apasionado por la programacion, dibujo,musica,lectura. Y poseo ciertas habilidades semi-desarrolladas,para ayudar un poco a los demas, me gusta compartir
+                    conocimientos.
                 </p>
             </div>
-    </div>
+        </div>
+
+    </section>
+
+    <section id="proyectos">
+        <div class="targetas">
+            <div class="targe">
+                <img src="./img/html5.jpg">
+                <p class="targeta-text">He adquirido conococimientos basicos de html5 la estructura de html y su sintaxis.</p>
+            </div>
+            <div class="targe">
+                <img src="./img/sql.png">
+                <hr>
+                <p>Conocimientos basicos en consultas con el gestor de base de datos Sql Server indepenidetemente de la Version.</p>
+            </div>
+            <div class="targe">
+                <img src="./img/k.jpg">
+                <p>Las bases de datos relacionales como lo es Mysql es una potente herramienta la cual manejo su sintaxis y consultas basicas.</p>
+            </div>
+            <div class="targe">
+                <img src="./img/css3.jpg">
+                <p>Las bases de datos relacionales como lo es Mysql es una potente herramienta la cual manejo su sintaxis y consultas basicas.</p>
+            </div>
+
+        </div>
+    </section>
 </body>
 
 </html>
