--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section>
         <div class="container">
             <div class="cards">
-                <img src=" /img/ridiculo.jpg">
+                <img src=" /img/rid.jpg">
                 <p> Hola, mi nombre es <b>Anibal Portillo</b> , soy estudiante de ingenieria en sistemas, apasionado por la programacion, dibujo,musica,lectura. Y poseo ciertas habilidades semi-desarrolladas,para ayudar un poco a los demas, me gusta compartir
                     conocimientos.
                 </p>
