--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <span class="navbar-toggler-icon "></span></button>
                 <div class="collapse navbar-collapse " id="navbarNavAltMarkup ">
                     <div class="navbar-nav ">
-                        <a class="nav-link " href="#proyectos">Aprendizajes Obtenidos</a>
+                        <a class="nav-link " href="#proyectos">Aprendizajes</a>
                     </div>
                 </div>
             </div>
@@ -31,7 +31,7 @@
     <section>
         <div class="container">
             <div class="cards">
-                <img src=" /img/rid.jpg">
+                <img src=" ./img/rid.jpg">
                 <p> Hola, mi nombre es <b>Anibal Portillo</b> , soy estudiante de ingenieria en sistemas, apasionado por la programacion, dibujo,musica,lectura. Y poseo ciertas habilidades semi-desarrolladas,para ayudar un poco a los demas, me gusta compartir
                     conocimientos.
                 </p>
@@ -60,6 +60,10 @@
                 <p>Las bases de datos relacionales como lo es Mysql es una potente herramienta la cual manejo su sintaxis y consultas basicas.</p>
             </div>
 
+        </div>
+    </section>
+    <section>
+        <div>
         </div>
     </section>
 </body>
